wip popover form

--- a/www/templates/create-group.html
+++ b/www/templates/create-group.html
@@ -4,22 +4,46 @@
     <!-- <fieldset> -->
 
       <div class="list">
-       <label class="item item-input">
-         <input type="text" placeholder="Create Event Name" ng-model="event.name">
-       </label>
-       <label class="item item-input">
-         <input type="text" placeholder="Create Passcode" ng-model="event.passcode">
-       </label>
+        <p>When was the last time you turned your mobile phone off (not just on silent)?</p>
 
-       <label class="item item-input">
-         <span class="input-label">Start Time</span>
-         <input type="time">
-       </label>
+        <p>What was your first email address?</p>
 
-       <button id="startButton" class="button button-full button-positive" ng-click=" addGroup(event.name); openModal(1);">
-         Start!
-       </button>
+        <p>How many e-mails are sitting in your inbox?</p>
 
+        <p>What technology do you think you will never adopt?</p>
+
+        <p>In what way are your parents out of date?</p>
+
+        <p>What single piece of technology makes your life easier?</p>
+
+        <p>What makes this an amazing time to live?</p>
+
+        <p>How many email addresses do you use on a regular basis?</p>
+
+        <p>What is the best invention during your lifetime?</p>
+
+        <p>How old where you when you got your first computer?</p>
+
+        <p>What technology scares you?</p>
+
+        <p>What was your first car?</p>
+
+        <p>What makes you feel old?</p>
+
+        <p>How has the internet affected you life?</p>
+
+        <p>How many e-mails do you get in a day?</p>
+
+        <p>What was your favorite childhood toy</p>
+
+        <p>What is your dream car?</p>
+
+        <p>What was your first bike like?</p>
+
+        <p>How many text messages do you receive in a day?</p>
+
+        <p>What technology bugs you when other people refuse to adopt it?</p>
+      </div>
     <!-- </fieldset> -->
 
 
