--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,9 +3,31 @@
       <h2>Welcome to Mixer!</h2>
 
         <div class="button-bar">
-          <a class="button" ng-click="toggleCreate=true; toggleJoin=false">Create a Mixer</a>
+          <a class="button" ng-click="openPopover($event)">Create a Mixer</a>
           <a class="button" ng-click="toggleCreate=false; toggleJoin=true;">Join a Mixer</a>
         </div>
+
+        <script id="inputCreateForm.html" type="text/ng-template">
+          <ion-popover-view>
+
+            <label class="item item-input">
+              <input type="text" placeholder="Create Event Name" ng-model="event.name">
+            </label>
+            <label class="item item-input">
+              <input type="text" placeholder="Create Passcode" ng-model="event.passcode">
+            </label>
+
+            <label class="item item-input">
+              <span class="input-label">Start Time</span>
+              <input type="time">
+            </label>
+
+            <button id="startButton" class="button button-full button-positive" ng-click=" addGroup(event.name); openModal(1);">
+              Start!
+            </button>
+
+          </ion-popover-view>
+        </script>
 
     </ion-content>
   </ion-view>
