--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9733,4 +9733,8 @@ a.button {
   transition-duration: 0s; }
 
 h2 {
-  font-family: 'Oxygen'; }
+  font-family: 'Oxygen';
+  color: #886aea; }
+
+.adminPar {
+  padding-top: 50px; }
