--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,12 +6,12 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-color-active-energized">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Home" href="#/tab/dash">
+  <ion-tab title="Home" class="mainNavigation" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
   <!-- Create Tab -->
-  <ion-tab title="Q's Suggestions" icon-off="ion-ios-help-outline" icon-on="ion-ios-help" href="#/tab/create">
+  <ion-tab class="questionIcon" icon-off="ion-ios-help-outline" icon-on="ion-ios-help" href="#/tab/create">
     <ion-nav-view name="create-group"></ion-nav-view>
   </ion-tab>
 
