--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -49,6 +49,11 @@ html * {
   border-top : 2px solid #AFDAAB;
 }
 
+.popover {
+  padding: 30px;
+  font-size: 15px;
+}
+
 .adminPar{
   padding-top: 50px;
 }
