--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -49,6 +49,12 @@ html * {
   border-top : 2px solid #AFDAAB;
 }
 
+.button.btnShadow.active,.btnShadow.active, .btnShadow.activated {
+    border-color: #145fd7 !important;
+    background-color: #145fd7 !important;
+}
+
+
 .popover {
   padding: 30px;
   font-size: 15px;
