--- a/www/templates/adminView.html
+++ b/www/templates/adminView.html
@@ -1,27 +1,29 @@
-<!-- <ion-view>
-  <ion-content>
-    <script id="adminView.html" type="text/ng-template">
-      <ion-modal-view>
-        <ion-content>
-        <ion-header-bar>
-          <h1 class="title">Group Name</h1>
-        </ion-header-bar>
+<ion-view view-title="Group Name">
+    <ion-content>
+    <ion-header-bar>
+      <h1 class="title">Group Name</h1>
+    </ion-header-bar>
 
-          <h3 class="adminPar">Mixer will start in...
-           <div ng-controller="testCtrl" >
-             <div blt-countdown-timer type="hms" date="Wed, 18 March 2016 00:00:00 GMT"></div>
-           </div>
-          </h3>
-          <h4>Guests Username</h4>
-          <p>JackBean</p>
-          <p>PillowSilk</p>
-          <p>LiloStitch</p>
-          <p>rainyDays</p>
-          <button class="button button-full button-calm" ng-click="closeModal(1)" >
-            back
-          </button>
-        </ion-content>
-      </ion-modal-view>
-    </script>
-  </ion-content>
-</ion-view> -->
+      <h3 class="adminPar padding">Mixer will start in...
+      </h3>
+        <div class="padding" ng-controller="testCtrl" >
+          <div blt-countdown-timer type="hms" date="Wed, 18 March 2016 00:00:00 GMT"></div>
+        </div>
+        <div class="padding">
+          <ion-list can-swipe="listCanSwipe">
+
+            <ion-item><h3>Guests Username</h3></ion-item>
+            <ion-item ng-repeat="user in users"></ion-item>
+            <ol>
+              <li>JackBean</li>
+              <li>PillowSilk</li>
+              <li>LiloStitch</li>
+              <li>rainyDays</li>
+            </ol>
+          </ion-list>
+        </div>
+      <a class="button button-calm ion-chevron-left" href="#/tab" ng-click="" >
+        back
+      </a>
+    </ion-content>
+  </ion-view>
