--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Account">
+<!-- <ion-view view-title="Account">
   <ion-content>
     <ion-list>
     <ion-toggle  ng-model="settings.enableFriends">
@@ -6,4 +6,4 @@
     </ion-toggle>
     </ion-list>
   </ion-content>
-</ion-view>
+</ion-view> -->
