--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Dashboard">
+<ion-view>
   <ion-content class="padding main-header">
     <div class="logo">MIXER LOGO</div>
 
@@ -21,9 +21,9 @@
         <input type="time">
       </label>
 
-      <button id="startButton" class="button button-full button-positive" ng-click="openPopover($event)">
+      <a id="startButton" class="button button-full button-positive"  href="#/tab/adminTab" ng-click="openPopover($event)">
         Start!
-      </button>
+      </a>
     </div>
   </fieldset>
 
@@ -35,9 +35,9 @@
       <label class="item item-input">
         <input type="text" placeholder="Event name you would like to join">
       </label>
-      <button class="button button-full button-calm" ng-click="openModal(2)">
+      <a class="button button-full button-calm" href="#/tab/guestView" ng-click="openModal(2)">
         Go!
-      </button>
+      </a>
     </div>
   </fieldset>
 
@@ -45,48 +45,12 @@
     <ion-popover-view>
 
       <p>You've successfully created a Mixer! Invite those who are attending and get them Mixin!</p>
+      <a class="button" ng-click=" closePopover();" >Okay!</a>
 
-      <div ng-controller="ModalController">
-        <button id="startButton" class="button button-full button-positive" ng-click=" openModal(1); closePopover();">
-          Awesome!
-        </button>
-      </div>
     </ion-popover-view>
   </script>
 
-  <script id="adminView.html" type="text/ng-template">
-    <ion-modal-view>
-      <ion-content>
-      <ion-header-bar>
-        <h1 class="title">Group Name</h1>
-      </ion-header-bar>
-
-        <h3 class="adminPar padding">Mixer will start in...
-        </h3>
-          <div class="padding" ng-controller="testCtrl" >
-            <div blt-countdown-timer type="hms" date="Wed, 18 March 2016 00:00:00 GMT"></div>
-          </div>
-          <div class="padding">
-            <ion-list can-swipe="listCanSwipe">
-
-              <ion-item><h3>Guests Username</h3></ion-item>
-              <ion-item ng-repeat="user in users"></ion-item>
-              <ol>
-                <li>JackBean</li>
-                <li>PillowSilk</li>
-                <li>LiloStitch</li>
-                <li>rainyDays</li>
-              </ol>
-            </ion-list>
-          </div>
-        <button class="button button-full button-calm" ng-click="closeModal(1)" >
-          back
-        </button>
-      </ion-content>
-    </ion-modal-view>
-  </script>
-
-  <script id="guestView.html" type="text/ng-template">
+<!--   <script id="guestView.html" type="text/ng-template">
     <ion-modal-view>
       <ion-header-bar>
         <h1 class="title">{{ groupName }}</h1>
@@ -98,6 +62,6 @@
         </button>
       </ion-content>
     </ion-modal-view>
-  </script>
+  </script> -->
   </ion-content>
 </ion-view>
