--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,13 +6,13 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-color-active-energized">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Home" class="mainNavigation" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Home" href="#/tab/home">
+    <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
-  <!-- Create Tab -->
+  <!-- Suggestion Qs -->
   <ion-tab class="questionIcon" icon-off="ion-ios-help-outline" icon-on="ion-ios-help" href="#/tab/create">
-    <ion-nav-view name="create-group"></ion-nav-view>
+    <ion-nav-view name="suggestion-qs"></ion-nav-view>
   </ion-tab>
 
   <!-- Enter Tab-->
@@ -20,16 +20,6 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
-
-  <!-- Chats Tab -->
-  <!-- <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
-  </ion-tab> -->
-
-  <!-- Account Tab -->
-  <!-- <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab> -->
-
-
 </ion-tabs>
+
+
