adds temp button for color change

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -54,7 +54,6 @@ html * {
     background-color: #145fd7 !important;
 }
 
-
 .popover {
   padding: 30px;
   font-size: 15px;
@@ -68,6 +67,9 @@ html * {
   font-size: 50px;
 }
 
+.guestDiv {
+  // background-color: black;
+}
 //config
 $highlightColor: #ddd;
 $trackColor: #4aaebf;
