--- a/www/templates/guestView.html
+++ b/www/templates/guestView.html
@@ -1,11 +1,10 @@
-<ion-view >
+<ion-view class="guestDiv">
   <ion-header-bar>
     <h1 class="title">Mixer</h1>
   </ion-header-bar>
-  <ion-content>
-  <h3>Welcome to Mixer {{ event.name }}!</h3>
+  <ion-content ng-style="myStyle">
+  <h3 >Welcome to Mixer {{ event }}!</h3>
     Mixer starts in...
-
     <div class="padding" ng-controller="testCtrl" >
       <div blt-countdown-timer type="hms" date="Wed, 18 March 2016 00:00:00 GMT"></div>
     </div>
@@ -13,5 +12,9 @@
     <a class="button button-calm ion-chevron-left" href="#/tab" ng-click="" >
       back
     </a>
+
+    <!-- <div ng-controller="testCtrl"> -->
+     <input type="button" value="color button" ng-click="myStyle=setColor()">
+    <!-- </div> -->
   </ion-content>
 </ion-view>
