wip switching text asycronously

--- a/www/templates/guestView.html
+++ b/www/templates/guestView.html
@@ -18,9 +18,8 @@
     <!-- </div> -->
 
     <div class="colorButton" ng-show="findFoundBtn">
-      <a class="button button-block button-outline">Find Group</a>
-      <a class="button button-block button-outline">Found Group</a>
-      <q class="button button-block button-outline">Cancel</a>
+      <a class="button button-block button-outline" href="#/tab/chats">Find Group</a>
+      <a class="button button-block button-outline" ng-click="myStyle=resetColor()">Found Group</a>
     </div>
 
   </ion-content>
