--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -12,5 +12,8 @@
         </ion-option-button>
       </ion-item>
     </ion-list>
+
+    <a href="#/tab/guestView" class="button button-large" side="right"> Back </a>
+
   </ion-content>
 </ion-view>
