--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -33,6 +33,15 @@ html * {
   font-size: 18px;
 }
 
+.colorButton {
+  text-align: center;
+  margin-top: 250px;
+}
+
+#foundGroup {
+  margin-left: 30px;
+}
+
 .main-header {
   background-image: url("http://static1.squarespace.com/static/5237edb1e4b019e0e587e9a5/525d34f2e4b0fb967a4d6fc0/525d34fde4b076bd2b772922/1381840128359/Ketubah-design-inpiration6.jpg");
 }
@@ -42,7 +51,7 @@ html * {
   color: $royal;
   font-size: 40px;
   text-align: center;
-  margin: 100px 50px;
+  margin: 50px 50px;
 }
 
 .tab-item.tab-item-active, .tab-item.active, .tab-item.activated {
