--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9741,6 +9741,13 @@ html * {
   box-shadow: 1px 4px 5px #888888;
   font-size: 18px; }
 
+.colorButton {
+  text-align: center;
+  margin-top: 250px; }
+
+#foundGroup {
+  margin-left: 30px; }
+
 .main-header {
   background-image: url("http://static1.squarespace.com/static/5237edb1e4b019e0e587e9a5/525d34f2e4b0fb967a4d6fc0/525d34fde4b076bd2b772922/1381840128359/Ketubah-design-inpiration6.jpg"); }
 
@@ -9749,7 +9756,7 @@ html * {
   color: #886aea;
   font-size: 40px;
   text-align: center;
-  margin: 100px 50px; }
+  margin: 50px 50px; }
 
 .tab-item.tab-item-active, .tab-item.active, .tab-item.activated {
   border-top: 2px solid #AFDAAB; }
