--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -39,7 +39,8 @@ html * {
 }
 
 #foundGroup {
-  margin-left: 30px;
+  margin-left: 36px;
+  z-index: 1;
 }
 
 .main-header {
@@ -55,7 +56,7 @@ html * {
 }
 
 .tab-item.tab-item-active, .tab-item.active, .tab-item.activated {
-  border-top : 2px solid #AFDAAB;
+  border-top : 3px solid #AFDAAB;
 }
 
 .button.btnShadow.active,.btnShadow.active, .btnShadow.activated {
@@ -76,175 +77,183 @@ html * {
   font-size: 50px;
 }
 
-.guestDiv {
-  // background-color: black;
+#guestQs {
+  z-index: 2;
+  font-size: 80px;
+  border-radius: 25px;
+  padding: 10px;
+  position: absolute;
+  color: #61ABBD;
+  margin-left: -30px;
+  margin-top: -22px;
 }
+
 //config
-$highlightColor: #ddd;
-$trackColor: #4aaebf;
-$size: 100px;
-$thickness: 3px;
-$background: #fff;
-$labelColor: $highlightColor;
+// $highlightColor: #ddd;
+// $trackColor: #4aaebf;
+// $size: 100px;
+// $thickness: 9px;
+// $background: #fff;
+// $labelColor: $highlightColor;
 
-* {
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-}
+// * {
+//   -moz-box-sizing: border-box;
+//   -ms-box-sizing: border-box;
+//   box-sizing: border-box;
+// }
 
-.timer {
-  width: $size;
-  height: $size;
-  position: relative;
-  display: table;
-  float: left;
-  margin: 1em .5em;
-  position: relative;
+// .timer {
+//   width: $size;
+//   height: $size;
+//   position: relative;
+//   display: table;
+//   float: left;
+//   margin: 1em .5em;
+//   position: relative;
 
-  &:before {
-    content: '';
-    position: absolute;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    display: block;
-    top: -3px;
-    left: 50%;
-    z-index: 10;
-    margin-left: -5px;
-    background: $trackColor;
-  }
+//   &:before {
+//     content: '';
+//     position: absolute;
+//     height: 12px;
+//     width: 12px;
+//     border-radius: 50%;
+//     display: block;
+//     top: -1px;
+//     left: 50%;
+//     z-index: 10;
+//     margin-left: -5px;
+//     background: $trackColor;
+//   }
 
-  .track {
-    border: ($thickness - 0) solid $trackColor;
-    width: $size;
-    height: $size;
-    border-radius: 50%;
-    position: absolute;
-  }
+//   .track {
+//     border: ($thickness - 0) solid $trackColor;
+//     width: $size;
+//     height: $size;
+//     border-radius: 50%;
+//     position: absolute;
+//   }
 
-  .face {
-    clip: rect(0, $size, $size, $size/2);
-    width: $size;
-    height: $size;
-    position: absolute;
-    .no-cssanimations & {
-      display:none;
-    }
-    .spinner {
-      border: $thickness solid $highlightColor;
-      border-radius: 50%;
-      height: $size;
-      width: $size;
-      position: absolute;
-      z-index: 2;
-      clip: rect(0, $size/2, $size, 0);
+//   .face {
+//     clip: rect(0, $size, $size, $size/2);
+//     width: $size;
+//     height: $size;
+//     position: absolute;
+//     .no-cssanimations & {
+//       display:none;
+//     }
+//     .spinner {
+//       border: $thickness solid $highlightColor;
+//       border-radius: 50%;
+//       height: $size;
+//       width: $size;
+//       position: absolute;
+//       z-index: 2;
+//       clip: rect(0, $size/2, $size, 0);
 
-      transition: -webkit-transform 1s;
-      transition: -moz-transform 1s;
-      transition: transform 1s;
+//       transition: -webkit-transform 1s;
+//       transition: -moz-transform 1s;
+//       transition: transform 1s;
 
-      -webkit-animation: animR 60s linear infinite;
-      -moz-animation: animR 60s linear infinite;
-      animation: animR 60s linear infinite;
-      -webkit-animation-delay:  0s;
-      -moz-animation-delay:  0s;
-      animation-delay: 0s;
+//       -webkit-animation: animR 60s linear infinite;
+//       -moz-animation: animR 60s linear infinite;
+//       animation: animR 60s linear infinite;
+//       -webkit-animation-delay:  0s;
+//       -moz-animation-delay:  0s;
+//       animation-delay: 0s;
 
-    }
-  }
+//     }
+//   }
 
-  .l.face {
-    clip: rect(0, $size/2, $size, 0);
-    .spinner {
-      -webkit-animation-name: animL;
-      -moz-animation-name: animL;
-      animation-name: animL;
+//   .l.face {
+//     clip: rect(0, $size/2, $size, 0);
+//     .spinner {
+//       -webkit-animation-name: animL;
+//       -moz-animation-name: animL;
+//       animation-name: animL;
 
-      clip: rect(0, $size/2, $size, 0);
-    }
-  }
-}
+//       clip: rect(0, $size/2, $size, 0);
+//     }
+//   }
+// }
 
-.time {
-  display: table;
-  width: $size;
-  height: $size;
-  position: relative;
-  p {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-    strong {
-      color: $labelColor;
-      letter-spacing: 1px;
-      font-size: 1.5em;
-      font-weight: normal;
-    }
-    span {
-      color: #222;
-      font-style: italic;
-      font-family: serif;
-    }
-  }
-}
+// .time {
+//   display: table;
+//   width: $size;
+//   height: $size;
+//   position: relative;
+//   p {
+//     display: table-cell;
+//     text-align: center;
+//     vertical-align: middle;
+//     strong {
+//       color: $labelColor;
+//       letter-spacing: 1px;
+//       font-size: 1.5em;
+//       font-weight: normal;
+//     }
+//     span {
+//       color: #222;
+//       // font-style: italic;
+//       // font-family: serif;
+//     }
+//   }
+// }
 
-@-webkit-keyframes animR {
-    0% {-webkit-transform: rotate(0deg); }
-  50% {-webkit-transform: rotate(180deg); }
-    100% {-webkit-transform: rotate(180deg);}
-}
+// @-webkit-keyframes animR {
+//     0% {-webkit-transform: rotate(0deg); }
+//   50% {-webkit-transform: rotate(180deg); }
+//     100% {-webkit-transform: rotate(180deg);}
+// }
 
-@-webkit-keyframes animL {
-    0% {-webkit-transform: rotate(180deg); }
-    50% {-webkit-transform: rotate(180deg); }
-    100% {-webkit-transform: rotate(360deg);}
-}
+// @-webkit-keyframes animL {
+//     0% {-webkit-transform: rotate(180deg); }
+//     50% {-webkit-transform: rotate(180deg); }
+//     100% {-webkit-transform: rotate(360deg);}
+// }
 
-@-moz-keyframes animR {
-    0% {-moz-transform: rotate(0deg); }
-  50% {-moz-transform: rotate(180deg); }
-    100% {-moz-transform: rotate(180deg);}
-}
-
-
-@-moz-keyframes animL {
-    0% {-moz-transform: rotate(180deg); }
-    50% {-moz-transform: rotate(180deg); }
-    100% {-moz-transform: rotate(360deg);}
-}
-
-@keyframes animR {
-    0% {transform: rotate(0deg); }
-  50% {transform: rotate(180deg); }
-    100% {transform: rotate(180deg);}
-}
+// @-moz-keyframes animR {
+//     0% {-moz-transform: rotate(0deg); }
+//   50% {-moz-transform: rotate(180deg); }
+//     100% {-moz-transform: rotate(180deg);}
+// }
 
 
-@keyframes animL {
-    0% {transform: rotate(180deg); }
-    50% {transform: rotate(180deg); }
-    100% {transform: rotate(360deg);}
-}
+// @-moz-keyframes animL {
+//     0% {-moz-transform: rotate(180deg); }
+//     50% {-moz-transform: rotate(180deg); }
+//     100% {-moz-transform: rotate(360deg);}
+// }
 
-#secs .spinner {
-  -webkit-animation-duration: 60s;
-  -moz-animation-duration: 60s;
-  animation-duration: 60s;
-}
-#mins .spinner {
-  -webkit-animation-duration: 3600s;
-  -moz-animation-duration: 3600s;
-  animation-duration: 3600s;
-}
-#hrs .spinner {
-  -webkit-animation-duration: 86400s;
-  -moz-animation-duration: 86400s;
-  animation-duration: 86400s;
-}
-#days .spinner {
-  -webkit-animation-duration: 2419200s;
-  -moz-animation-duration: 2419200s;
-  animation-duration: 2419200s;
-}
+// @keyframes animR {
+//     0% {transform: rotate(0deg); }
+//   50% {transform: rotate(180deg); }
+//     100% {transform: rotate(180deg);}
+// }
+
+
+// @keyframes animL {
+//     0% {transform: rotate(180deg); }
+//     50% {transform: rotate(180deg); }
+//     100% {transform: rotate(360deg);}
+// }
+
+// #secs .spinner {
+//   -webkit-animation-duration: 60s;
+//   -moz-animation-duration: 60s;
+//   animation-duration: 60s;
+// }
+// #mins .spinner {
+//   -webkit-animation-duration: 3600s;
+//   -moz-animation-duration: 3600s;
+//   animation-duration: 3600s;
+// }
+// #hrs .spinner {
+//   -webkit-animation-duration: 86400s;
+//   -moz-animation-duration: 86400s;
+//   animation-duration: 86400s;
+// }
+// #days .spinner {
+//   -webkit-animation-duration: 2419200s;
+//   -moz-animation-duration: 2419200s;
+//   animation-duration: 2419200s;
+// }
