--- a/www/templates/adminView.html
+++ b/www/templates/adminView.html
@@ -1,14 +1,13 @@
 <ion-view view-title="Group Name">
   <ion-content>
     <ion-header-bar>
-      <h1 class="title">Group Name</h1>
+      <h1 class="title">Group Name{{ events.name }}</h1>
     </ion-header-bar>
 
     <h3 class="adminPar padding">Mixer will start in...
     </h3>
-    <div class="padding" ng-controller="testCtrl" >
-      <div blt-countdown-timer type="hms" date="Wed, 18 March 2016 00:00:00 GMT"></div>
-    </div>
+
+
     <div class="padding">
       <ion-list can-swipe="listCanSwipe">
 
