--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -20,11 +20,10 @@
       </label>
 
       <div >
-      <!-- <label class="item item-input"> -->
-        <!-- <span class="input-label">Start Time</span>
-        <input type="time"> -->
+      <label class="item item-input">
+        <span class="input-label">Start Time</span>
+      <input type="time"></input>
 
-        <input type="number" ng-model="minutes" />
       </label>
 
         <a id="startButton" class="button button-full button-positive"  href="#/tab/adminTab" ng-click="addEvent(eventCreated);openPopover($event) ">
