--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9743,7 +9743,7 @@ html * {
 
 .colorButton {
   text-align: center;
-  margin-top: 250px; }
+  margin-top: 375px; }
 
 #foundGroup {
   margin-left: 36px;
@@ -9751,6 +9751,9 @@ html * {
 
 .main-header {
   background-image: url("http://static1.squarespace.com/static/5237edb1e4b019e0e587e9a5/525d34f2e4b0fb967a4d6fc0/525d34fde4b076bd2b772922/1381840128359/Ketubah-design-inpiration6.jpg"); }
+
+.contentDiv {
+  padding: 10px; }
 
 .logo {
   border: 2px solid black;
@@ -9762,16 +9765,23 @@ html * {
 .tab-item.tab-item-active, .tab-item.active, .tab-item.activated {
   border-top: 3px solid #AFDAAB; }
 
-.button.btnShadow.active, .btnShadow.active, .btnShadow.activated {
-  border-color: #145fd7 !important;
-  background-color: #145fd7 !important; }
-
 .popover {
   padding: 30px;
   font-size: 15px; }
 
 .adminPar {
   padding-top: 50px; }
+
+.countdownTimer {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  height: 100px;
+  margin-bottom: 10px;
+  font-size: 30px;
+  text-align: center; }
+
+.displayNameList {
+  padding: 10px 5px 10px 5px; }
 
 .questionIcon {
   font-size: 50px; }
